--- a/tea cozy/style.css
+++ b/tea cozy/style.css
@@ -1,9 +1,9 @@
 body {
-    font-family: Helvetica;
+    margin: 0;
+    font-family: "Helvetica", sans-serif;
     font-size: 22px;
     color: seashell;
     background-color: black;
-    opacity: .9;
     text-align: center;
 }
 
@@ -74,13 +74,18 @@ nav span {
     width: 100%;
 }
 
+/* Store Section */
+
 #store {
     width: 1000px;
     height: 700px;
+    margin: auto;
+    padding-top: 70px;
 }
 
 .item {
     padding: 5px;
+    display: inline-flex;
 }
 
 .item img {
@@ -99,5 +104,41 @@ nav span {
 /* Location Section */
 
 .flex-container.locations {
-    
+    padding-top: 5px;
+}
+
+#locations {
+    background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
+    height: 500px;
+    padding-top: 70px;
+}
+
+#locations .flex-container {
+    margin: auto;
+    width: 1100px;
+
+}
+
+.location {
+    opacity: 1.0;
+    padding: 10px;
+    margin: 5px 20px;
+    background-color: black;
+    flex-basis: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* Contact Section */
+
+#contact {
+    height: 200px;
+}
+
+/* Footer Section */
+
+footer {
+    text-align: left;
+    padding-left: 20px;
 }
